# mediaparty-trust-api

./: .env.example  .gitignore  README.md  pyproject.toml  run_api.sh  run_test.sh  test_api.py
chrome-extension/: mock_api.py
chrome-extension/extension/: background.js  content.js  manifest.json  options.html  options.js  styles.css
chrome-extension/scripts/: README.md  snapshot_infobae.sh
src/mediaparty_trust_api/: main.py  models.py
src/mediaparty_trust_api/api/v1/: endpoints.py
src/mediaparty_trust_api/services/: matcher.py  metrics.py  stanza_service.py
test/: input.json  input_example.json  input_example_espert.json  output.json
