[project]
name = "mediaparty-trust-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "JuanCruzC97", email = "juancruzcamacho97@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
mediaparty-trust-api = "mediaparty_trust_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
